--- a/_assets/scss/styles.scss
+++ b/_assets/scss/styles.scss
@@ -26,7 +26,7 @@
 /*==========  MODULES  ==========*/
 // @import 'partials/modules/modules';
 @import 'partials/modules/slabtext';
-@import 'partials/modules/reveal';
+// @import 'partials/modules/reveal';
 @import 'partials/modules/modal';
 @import 'partials/modules/wgform';
 @import 'partials/modules/card';
