--- a/_includes/wgsalesletter2.html
+++ b/_includes/wgsalesletter2.html
@@ -1,72 +1,143 @@
 
-<div class="salesletter">
+<div class="salesletter inner-container">
 
   <h2>Get your detective juices flowing?!</h2>
   <h3>Bet it did &hellip; why stop now?</h3>
-  <ul>
-    <li>If you love a good mystery, like DEATH BY GAS &hellip;</li>
-    <li>If you love murder on a rainy night, nefarious criminals skulking in back alleys, intrepid detectives racing the clock, damsels, [!]</li>
+  <p class="salesletter__sub1">Keep reading to find out how you can get more murder and more crime fiction than you ever imagined &hellip; including a <span class="underline">free novella</span> (normally sells for $1.99) just for checking it out!</p>
+  <p>If you love a good mystery, like <span class="italic">Death by Gas</span>.</p>
+  <p>If you love:</p>
+  <p class="indent bloodied">&hellip; murder on a rainy night</p>
+  <p class="indent bloodied">&hellip; nefarious criminals skulking in back alleys</p>
+  <p class="indent bloodied">&hellip; intrepid detectives racing the clock</p>
+  <p class="indent bloodied">&hellip; dangerous dames</p>
+  <p class="indent bloodied">&hellip; genteel grannies &amp; society murder</p>
+  <p class="indent bloodied">&hellip; puzzles, crime, clues &amp; red herrings</p>
+  <p class="bold">Then you're in the right place!</p>
+  
+
+  <p>See, that's what I'm offering you here on <span class="sitetitle">Tales of Murder</span> &hellip; thrilling murder mystery &amp; crime stories that grab hold of you and don't let go until the last line.</p>
+  <p class="bloodied indent">Mystery.</p>
+  <p class="bloodied indent2">Danger.</p>
+  <p class="bloodied indent3">Suspense.</p>
+  <p class="bloodied indent4">Crime.</p>
+  <p class="bloodied indent5">Murder.</p>
+  <p class="bloodied indent6">All of it.</p>
+  <p class="italic bold caps bloodied indent7">In one place.</p>
+
+  <p class="salesletter__sub2">Let me introduce myself</p>
+
+  <img class="intro_atticus" src="/assets/img/shield2.png" alt="Atticus, the Murderous Crow">
+
+  <p>My name is <strong>Atticus, aka The Murderous Crow</strong>. I'm what you might call a literary detective. Not like ole Sherlock&ndash;a detective <span class="italic">in</span> literature. No, I investigate crime literature, itself.</p>
+  <p>It's my job to search the dark alleys, the rain-soaked moors and lonely mansions, the small towns and big cities for the best murder mystery &amp; crime stories by the best writers in biz, anywhere they may be found. Lost issues, old paperbacks, discarded volumes</p>
+  <p>I've collected these stories &mdash; ranging from short brain teasers like <span class="italic">Death by Gas</span> to full-length novels that'll keep you guessing long past your bedtime, and everything in between!</p>
+  <p>Cozies, capers hardboiled &amp; noir, professional sleuths and hapless hacks caught up in murder.</p>
+  <p class="salesletter__sub3">Classic stories from the past 100+ years, like:</p>
+  <ul class="fa-ul salesletter__storylist">
+    <li><span class="storytitle"><i class="fa-li fa fa-book"></i>You'll Kill the People</span> by Richard Brister</li>
+    <li><span class="storytitle"><i class="fa-li fa fa-book"></i>First Come, First Killed</span> by D. A. Kyle</li>
+    <li><span class="storytitle"><i class="fa-li fa fa-book"></i>The Devilry of Dr. Waugh</span> by Christopher B. Booth</li>
+    <li><span class="storytitle"><i class="fa-li fa fa-book"></i>The Brand of Cain</span> by Ward Sterling</li>
+    <li><span class="storytitle"><i class="fa-li fa fa-book"></i>Blueberry Pie</span> by Thyra Samter Winslow</li>
+    <li><span class="storytitle"><i class="fa-li fa fa-book"></i>The Campaign for Vengence</span> by John Baer</li>
   </ul>
 
-  <h4>Keep reading to find out how you can get more murder and more crime than you ever imagined</h4>
+  <p>Every week, I share 12 new stories &hellip; 2 thrillers every weekday, plus a longer story<sup class="bloodied">[1]</sup> every Monday &amp; Wednesday. That's over 40,000 words of mystery every week. Enough to keep you up every night!</p>
 
-  <p>See, that's what I'm offering you here on TalesofMurder.com &hellip; thrilling murder mystery &amp; crime stories that grab hold of you and don't let go until the last line. Mystery. Danger. Suspense. Crime. Murder. All of it. In one place.</p>
+  <p class="footnote"><sup class="bloodied">[1]</sup> (for Premium Members Only &hellip; find out, below, how you can become a subscriber &amp; get your <span class="underline">free novella</span>!)</p>
 
-  <h4><img src="[LOGO]" alt="Atticus, the Murderous Crow">Let me introduce myself</h4>
+  <img class="cover-fan shadowed" src="assets/img/cover-fan.png" alt="fan image of covers"> <!-- media queries to switch to 3-across fan on small screens -->
 
-  <p>My name is Atticus, aka The Murderous Crow. I'm what you might call a literary detective. Not like ole Sherlock&ndash;a detective <em>in</em> literature. No, I investigate crime literature, itself. It's my job to search the dark alleys, the rain-soaked moors and lonely mansions, the small towns and big cities for the best murder mystery &amp; crime stories anywhere.</p>
-  <p>I've collected these stories &mdash; ranging from short brain teasers like Death By Gas to full-length novels that'll keep you guessing long past your bedtime &hellip; and everything in between &mdash; and filed them here on TalesofMurder.com for your enjoyment.</p>
-  <p>Classic stories from the past 100+ years, like:</p>
-  <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+  <p>Every story can be read online or downloaded to be enjoyed offline on your fav ebook reader &hellip; Kindle, Nook, Kobo, you-name-it ereader device or app.</p>
+
+  <p class="salesletter__sub2">Here's the deal</p>
+
+  <img src="/assets/img/customer-avatar.png" alt="customer avatar" class="customer-avatar">
+
+  <p>You're a murder mystery &amp; crime fiction fan. You want to spend your time reading; chasing clues with your favorite detective &amp; solving literary crime. You don't want to waste your valuable time searching the jungle (or is it a rain forest?) for something good.</p>
+
+  <p>Sure, you can ask a stranger for a Good Read, but how do you know for sure? I mean, just 'cause some <em>pigeon</em> gave it 5 stars doesn't mean it's star-worthy.</p>
+
+  <p>But what if you knew every story had been read &amp; enjoyed by thousands of readers, that it had stood the test of time, and garnered critical praise &amp; honor?</p>
+
+  <p>See, I want to put the best murder myster &amp; crime literature in you hands. Stories from authors like <span class="bloodied italic">Ward Sterling, Harry C. Hervey, Jr., John D. MacDonald</span>.</p>
+  <p>Authors who've been published in the finest detective story collections; who's work has thrilled readers for decades, not weeks.</p>
+
+  <!-- <img src="/assets/img/author-headshots" alt="author headshots" class="author-headshots"> -->
+
+  <p>That's what you get here at <span class="sitetitle">Tales of Murder</span> &mdash; the best literary crime &amp; murder published anywhere, written by the best writers in the biz &hellip;</p>
+  <p class="bold bloodied">Now available for easy reading online, or on your fav ereader device or ebook app.</p>
+
+  <p class="salesletter__sub2">But wait, there's more &hellip;</p>
+  
+  <p>Sure, you can stop by the site when you think of it. Browse the list of stories, sorting by genre (cozy, noir, caper, professional/amateur sleuth, golden age, etc.), author, etc., and find a few goodies to read. But, &hellip;</p>
+  <p>What if you miss one, overlook that edge-of-your-seat thrill that'll cure the weekday blues?</p>
+
+  <p class="italic bloodied">Let me tell you a secret. Go ahead, lean closer &amp; I'll tell you how you can get more crime &amp; murder than you ever thought possible &hellip;</p>
+
+  <p class="italic bloodied">Ready?</p>
+
+  <p>It's called <span class="bold caps bloodied">The Red File</span>.</p>
+
+  <img class="rf-cover shadowed" src="/assets/img/rf-cover.png" alt="THE RED FILE cover">
+
+  <p><span class="bold caps bloodied">The Red File</span> is my weekly email digest of murder mystery &amp; crime stories. This collection of short stories, which normally sells for $3.99 per issue, includes 12 stories ranging from quick <i>while-you-wait</i> 15-minute reads (perfect for while your waiting at the doctor's office or to pick up your kids at school) to <i>leisurely Saturday afternoon</i> reads that're just the ticket on a cold, rainy day.</p>
+
+  <p>Every issue is jam packed with a variety of styles &amp; types of murder mystery &amp; crime stories, from cozy to noir, amateur &amp; professional sleuths, crazed crooks &amp; desperate desperadoes. Over 110 pages &mdash; 40,000 plus words &mdash; of crime, clues, suspense, dames, detectives, murder &amp; mystery.</p>
+
+  <p>It's like getting a paperback novel every week, for free!</p>
+
+  <p>And sent directly to your inbox, each issue lists the new stories and other content, providing direct links to download each story to your favorite ereader device. Or, download the entire issue.</p>
+
+  <p class="salesletter__sub2">Every issue includes:</p>
+  <ul class="fa-ul salesletter__trf">
+    <li><i class="fa-li fa fa-cog fa-spin"></i>10 short stories you can enjoy more than a week before the general public sees it online</li>
+    <li><i class="fa-li fa fa-cog fa-spin"></i>2 PREMIUM, subscriber-only longer short stories, up to 10,000 words each</li>
+    <li><i class="fa-li fa fa-cog fa-spin"></i>a serialized murder mystery novel, a few chapters each week</li>
+    <li><i class="fa-li fa fa-cog fa-spin"></i>news &amp; relevant information from the world of literary crime &amp; murder</li>
+    <li><i class="fa-li fa fa-cog fa-spin"></i>a Definition of the Week (Quick quiz ... do you know what a flivver is? The answer is on the sign up form, below!)</li>
+    <li><i class="fa-li fa fa-cog fa-spin"></i>surprise offers, exclusive to true murder mystery fans (that's you!)</li>
+  </ul>
+  
+  <p>Simply subscribe below with your best email address, something you'll have access to on your tablet or smartphone. (Unsubscribe anytime; I'll never send any heavies to inquire why!)</p>
+
+  <p>Then, every Sunday morning, you'll wake up to a new issue of THE RED FILE in your inbox. Each email contains the Table of Contents for that issue.</p>
+
+  <p class="salesletter_sub2">3 Simple Steps</p>
+  <ol>
+    <li>Just click, open and brown the ToC.</li>
+    <li>See a story that looks interesting?
+      <ol>
+        <li>Click on it &amp; you'll be instantly taken to the download page; OR, </li>
+        <li>Download the entire issue &amp; enjoy 110+ pages of great murder mystery literature.</li>
+      </ol>
+    </li>
+    <li>Sit back, open your stories on your ereader device or app &hellip; lose yourself.</li>
+  </ol>
+
+  <p class="salesletter__sub2">And because I like you</p>
+
+  <p>I'm giving away, for a limited time, an exciting, edge-of-your-seat murder mystery novella as my way of welcoming you to my little literary detective agency. Normally, this gem sells for $1.99 but it's yours free, just for signing up.</p>
+
+  <img class="customer-avatar shadowed" src="/assets/img/campaign-for-vengence_cover-full.jpg" alt="The Campaign for Vengence">
+
+  <p>“Jimmy! Jimmy! I’ll get them for you! Each one of them, Jimmy! And may the soul and flesh of me writhe in agony, may the mind of me be in torture and torment, till my mission is done!”</p>
+
+  <p>Plus, you'll be sent a sample issue (complete) of THE RED FILE to download &amp; enjoy between now &amp; next Sunday morning.</p>
+
+  <p>Not only that, but you'll have instant access to all my Premium stories not available to just anybody. When browsing my list of stories (under SHORT STORIES), look for the yellow PREMIUM banner on a story, click to open the story page, then enter the email address you used to sign up, and the story is yours to enjoy.</p>
+
+  <p class="footnote">*Note: I use a little cookie on your browser that reminds the browser that you've already signed up. That way, when you come back, you won't have to sign in again. A different browser will require you to sign in again but will not double your subscription. Your information is NEVER shared with anyone &amp; your other online activities are NEVER tracked with this cookie. Think of it as the doorman at the underground club who slides open the little door, recognizes you, &amp; lets you enter.</p>
+
+  <p class="salesletter__sub2">Well, what're you waiting for??</p>
+
+  <p>Click the big red button, below (not the black button that'll just take you to my story files), and get your free novella, The Campaign for Vengence. Remember you'll also get the sample issue and be subscribed to get the weekly issue of THE RED FILE, including:</p>
+  <ul class="fa-ul salesletter__trf">
+    <li><i class="fa-li fa fa-chevron-circle-right"></i>10 thrilling stories</li>
+    <li><i class="fa-li fa fa-chevron-circle-right"></i>2 PREMIUM stories</li>
+    <li><i class="fa-li fa fa-chevron-circle-right"></i>a serialized novel</li>
+    <li><i class="fa-li fa fa-chevron-circle-right"></i>news, definitions, and more!</li>
   </ul>
 
-  <p>Every week, I share 12 new stories ... 2 thrillers every weekday, plus a longer story (for Premium Members Only &hellip; find out, below, how you can become a subscriber!) every Monday &amp; Wednesday. That's over 40,000 words of mystery every week. Enough to keep you up every night!</p>
 
-  <img src="" alt="fan image of covers">
-
-  <p>Every story can be read online or downloaded to be enjoyed offline on your fav ebook reader &hellip; Kindle, Nook, Kobo, you-name-it.</p>
-  
-  <h4>But wait, there's more</h4>
-  
-  <p>Here's the deal ... I want to put the best murder myster &amp; crime literature in you hands. Stories from authors like:</p>
-  
-  <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-  </ul>
-
-  <img src="" alt="">
-
-  <p>Sure, you can stop by the site when you think of it. Browse the list of stories, sorting by genre ([list]), author, etc., and find a few goodies to read. But what if you miss one? What if you overlook that edge-of-your-seat thrill that'll cure the weekday blues?</p>
-
-  <p>Well, you can get every story I have sent directly to your inbox, with a special link to send it to your ereader. No muss; no fuss. No worries about missing out.</p>
-
-  <p>How does that sound?</p>
-
-  <h4>Great, huh?! But what's the catch, you're asking?</h4>
-
-  <p>No catch. Just a sweet deal for you. Ten exciting short stories, up to 7,500 words (or about a 45 min read) PLUS 2 longer (an hour or more to read) PREMIUM stories, all delivered to your favorite ereader for your enjoyment.</p>
-
-  <p>"How?" you're asking!</p>
-
-  <p>Simple. By subscribing to my weekly email digest of murder mystery &amp; crime stories called THE RED FILE.</p>
-
-  <img src="" alt="THE RED FILE cover">
-
-  <p>Every Sunday morning, you'll wake up to a new issue of THE RED FILE in your inbox. Just click, open and browser the Table of Contents. See a story that looks interesting? Click on it and you'll be instantly taken to a page to download that story.</p>
-
-  <p>Or download the entire issue and enjoy 110+ pages of great murder mystery literature.</p>
-
-  <p>But that's not all ...</p>
-
-  
-    
 </div> <!-- end div salesletter -->
