--- a/_assets/scss/partials/base/_base.scss
+++ b/_assets/scss/partials/base/_base.scss
@@ -109,11 +109,17 @@ a {
 
 .inner-container {
 	text-transform: none;
-	width: 37.5rem;
+	max-width: 37.5rem;
 	margin: 0 auto;
 }
 
-
+.shadowed {
+	filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12,
+Color='#444')";
+	filter: url(#drop-shadow);
+	-webkit-filter: drop-shadow(12px 12px 7px rgba(0,0,0,0.5));
+	filter: drop-shadow(12px 12px 7px rgba(0,0,0,0.5));
+}
 
 
 
