--- a/_layouts/post_combo.html
+++ b/_layouts/post_combo.html
@@ -65,7 +65,9 @@ layout: default
 	<article class="post__content" id="story-main">
   	{{ content }}
   	{% include readmore.html %}
+  	<!-- include s2s-pagination.html -->
   </article>
+
 
 	{% include ssactions.html %}
 
