--- a/_includes/bookcatalog__pending.html
+++ b/_includes/bookcatalog__pending.html
@@ -7,7 +7,10 @@
 	
 	<div class="bc__notify">
 		<p>Get presale discounts, beta&#45;reader opportunities and other special deals &mdash; for subscribers only. And get free short stories delivered to you inbox.</p>
-		<p>Current works in progress include&#58;</p>
+
+		{% include BC-form.html %}
+
+		<h3>Current works in progress include&#58;</h3>
 		<ul class="cards bc__list clearfix">
 			<li class="card bc__book">
 				<h2 class="card__title bc__title">And Sudden Death</h2>
@@ -44,30 +47,8 @@
 		</ul>
 	</div>
 
-	<hr>
-
-	<form method="post" class="af-form-wrapper" accept-charset="iso-8859-1" action="http://www.aweber.com/scripts/addlead.pl"  >
-		<input type="hidden" name="meta_web_form_id" value="1820489910" />
-		<input type="hidden" name="meta_split_id" value="" />
-		<input type="hidden" name="listname" value="awlist3582323" />
-		<input type="hidden" name="redirect" value="http://talesofmurder.com/followups/bc-thanks.html" id="redirect_77eb7d443e872467b7dcb112587995d8" />
-
-		<input type="hidden" name="meta_adtracking" value="Book_Catalog_Notification" />
-		<input type="hidden" name="meta_message" value="1" />
-		<input type="hidden" name="meta_required" value="name,email" />
-		<input type="hidden" name="meta_forward_vars" value="1" />
-		<input type="hidden" name="meta_tooltip" value="" />
-
-		<label class="previewLabel" for="awf_field-69895319">Name: </label>
-		<input id="awf_field-69895319" type="text" name="name" class="text" value=""  onfocus=" if (this.value == '') { this.value = ''; }" onblur="if (this.value == '') { this.value='';} " tabindex="500" />
-
-		<label class="previewLabel" for="awf_field-69895320">Email: </label>
-		<input class="text" id="awf_field-69895320" type="text" name="email" value="" tabindex="501" onfocus=" if (this.value == '') { this.value = ''; }" onblur="if (this.value == '') { this.value='';} " />
-
-		<input name="submit" id="af-submit-image-1820489910" type="image" class="image" style="background: none; max-width: 100%;" alt="Submit Form" src="http://aweber.com/images/forms/plain/buttons/grey.png" tabindex="502" />
-	</form>
+	<!-- <hr> -->
 
 	
-
 
 </section> <!-- end section bookcatalog -->
