--- a/_includes/card2.html
+++ b/_includes/card2.html
@@ -1,8 +1,6 @@
 <ul class="cards">
-	{% for post in site.posts %}
+	{% for post in site.the-red-file %}
 	
-
-		{% if post.category == 'the-red-file' %}
 			<a href="{{ post.url }}">
 				<li class="card">
 
@@ -21,7 +19,6 @@
 				</li>
 			</a>
 
-		{% endif %}
 	{% endfor %}
 
 </ul>
