--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,7 +8,7 @@
 		<div class="contact__copy">
 			<h3>Well, why not?</h3>
 			<p>Drop me a line &hellip; about anything! I love chattin' with fans.</p>
-			<p>Got a comment about a story? Or find a problem on the site? Or maybe you just want to ask a question. Go ahead. Fill out the form, mail us a letter (is that still a thing?) or give us a call.</p>
+			<p>Got a comment about a story? Or find a problem on the site? Or maybe you just want to ask a question. Go ahead. Fill out the form, mail us a letter (is that still a thing?) or just send me an email.</p>
 
 			<div class="contact__address">
 				<ul class="fa-ul">
@@ -36,9 +36,9 @@
 
 
 
-		<form action="//formspree.io/talesofmurderpress@gmail.com" method="post" class="contact__form">
+		<form action="//formspree.io/atticus@talesofmurder.com" method="post" class="contact__form">
 			
-			<input type="hidden" name="_next" value="//localhost:3000/followups/index.html" />
+			<input type="hidden" name="_next" value="/thanks/contact-form/" />
 			<input type="text" name="_gotcha" style="display: none" />
 
 			<label for="name">Your Name&#58;</label>
