--- a/_includes/modal2.html
+++ b/_includes/modal2.html
@@ -4,7 +4,7 @@
   </a>
 
   <a href="{{ site.url }}/short-stories">
-    <span class="nothanks">No, thanks.<br><small>I'm boring, so I'll just&nbsp;read&nbsp;online. :-(</small></span>
+    <span class="nothanks">No, thanks.<br><small>I'm not a true murder mystery fan. :-(</small></span>
   </a>
 </div> <!-- end div modal -->
 <!-- <div class="nothanks">
