--- a/_includes/policies.html
+++ b/_includes/policies.html
@@ -17,7 +17,7 @@
 
 		<h3>Cookies</h3>
 
-		<p>The site does use cookies and other methods to track our users. This is only to ensure a better experience for our readers and you can always opt out at any time (a banner at the top/bottom of the page will enable you to opt in or out). Cookies are used to recognize frequent visitors so that we can provide the custom content.</p>
+		<p>The site does use cookies and other methods to track our users. This is only to ensure a better experience for our readers and you can always opt out at any time. Cookies are used to recognize frequent visitors so that we can provide the custom content. The cookie allows the site to recognize returning visitors, to enable you to read PREMIUM CONTENT available only to subscribers without asking you to log in again.</p>
 
 	</div> <!-- end of div policies__content -->
 
