--- a/_includes/manifesto.html
+++ b/_includes/manifesto.html
@@ -21,23 +21,25 @@
 
 		<p>Now, after nearly two years of research and development, Tales of Murder a Press is proud to announce the first stage of our long term plans with the launch of TalesofMurder.com.</p>
 
-		<p>The site offers readers and fans a single location to find and enjoy these stories. It provides, free to all readers, short stories of up to 5,000 words. A free weekly email newsletter delivers these exciting stories to fans, giving them a constant stream of content to enjoy online or off. It will also provide longer works up to about 7,000 words, not available on the site. Delivered to your inbox each Sunday morning, this free newsletter will have up to ten new stories ranging from ultra&#8208short to very long, as well as news and interesting facts about the murder mystery genre, authors and their work, culled from the sister site and TalesofMurder.com blog site MurderWiki.com.</p>
+		<p>The site offers readers and fans a single location to find and enjoy these stories. It provides, free to all readers, short stories of up to 5,000 words. A free weekly email newsletter delivers these exciting stories to fans, giving them a constant stream of content to enjoy online or off. It will also provide longer works &mdash; between 7,000 and 10,000 words &mdash; exclusively to subscribers.</p>
 
-		<p>A paid email newsletter and online magazine, much like the classic detective and mystery periodicals of the early to mid&#820820th century, is also under development. Through this paid weekly publication, fans will gain access to longer works, from 10 &ndash; 15,000 words. Each issue will include everything from the free email newsletter as well as the longer works and at least one serialized novel.</p>
+		<p>These subscribers will recieve <em>THE RED FILE</em>, the weekly email digest.	Delivered to your inbox each Sunday morning, this free newsletter will have up to ten new stories ranging from ultra&#8208short to very long, as well as news and interesting facts about the murder mystery genre, authors and their work, culled from the sister site and TalesofMurder.com blog site MurderWiki.com.</p>
 
-		<p>Full&#8208length novels will occasionally be serialized on the site and will be published as ebooks, paperbacks and audiobooks available through the site and popular online retailers. Single edition and collections of short stories will also be available for purchase. Subscribers to the paid email newsletter will have the opportunity to read these novels and short stories prior to public release and receive special discounts and limited editions.</p>
+<!-- 		<p>A paid email newsletter and online magazine, much like the classic detective and mystery periodicals of the early to mid&#820820th century, is also under development. Through this paid weekly publication, fans will gain access to longer works, from 10 &ndash; 15,000 words. Each issue will include everything from the free email newsletter as well as the longer works and at least one serialized novel.</p> -->
 
-		<p>Several podcasts are also under development. The first, called The MurderWiki Podcast, will be a weekly discussion of the genre, authors and important facts. It will include interviews with experts and authors.</p>
+		<p>Full&#8208length novels will occasionally be serialized on the site and will be published as ebooks, paperbacks and audiobooks available through the site and popular online retailers. Single edition and collections of short stories will also be available for purchase. Subscribers to <em>THE RED FILE</em> will have the opportunity to read these novels and short stories prior to public release and receive special discounts and limited editions.</p>
 
-		<p>The second, under the name Tales of Murder Podcast, harkens back to the days of radio dramas and will provide fans with dramatic readings of various short stories. Imagine a thrilling caper or murder mystery coming to life with voices and sound effects, perfect for listening to on your daily commute or with friends huddled around your iPod.</p>
+<!-- 		<p>Several podcasts are also under development. The first, called The MurderWiki Podcast, will be a weekly discussion of the genre, authors and important facts. It will include interviews with experts and authors.</p> -->
 
-		<p>Finally, because so many of these stories, both short and long, are highly visual, as is the nature of all great storytelling, select works will be developed into short and feature&#8208length films for distribution via the Internet.</p>
+<!-- 		<p>The second, under the name Tales of Murder Podcast, harkens back to the days of radio dramas and will provide fans with dramatic readings of various short stories. Imagine a thrilling caper or murder mystery coming to life with voices and sound effects, perfect for listening to on your daily commute or with friends huddled around your iPod.</p> -->
+
+<!-- 		<p>Finally, because so many of these stories, both short and long, are highly visual, as is the nature of all great storytelling, select works will be developed into short and feature&#8208length films for distribution via the Internet.</p> -->
 
 		<p>Tales of Murder Press, and the forces behind it, are first and foremost fans of murder mystery fiction from cozies to noir and hardboiled, with amateur and professional sleuths, evil villains and desperate crooks. We seek to honor the men and women who penned these works while proving their literary worth and ensuring they do not pass into literary or historical obscurity.</p>
 
-		<p>Join us on this quest by signing up for our free email newsletter, the paid email newsletter, or simply reading and sharing these stories with your friends and other fans.</p>
+		<p>Join us on this quest by signing up for our free email newsletter or by simply reading and sharing these stories with your friends and other fans. <a href="http://www.talesofmurder.com/#openModal">Sign up</a> today and get a free copy of the thrilling novella <em>The Campaign for Vengence</em> by John Baer as our way of saying THANKS!</p>
 
-		<p>[EMAIL SIGN UP BOX]</p>
+		<!-- <p>[EMAIL SIGN UP BOX]</p> -->
 
 
 	</div>
