--- a/_includes/terms.html
+++ b/_includes/terms.html
@@ -8,9 +8,11 @@
 
 		<h3>Copyright Status</h3>
 
-		<p>All works—whether short stories or novels, whether provided free on the site and/or via email subscription, or paid content—is public domain o used by permission of the copyright holder. We acquire the material by purchasing back issues of old mystery and detective magazines and reformatting the stories for internet and ereader use. </p>
+		<p>All works—whether short stories or novels, whether provided free on the site and/or via email subscription, or paid content—is public domain or used by permission of the copyright holder. We acquire the material by purchasing back issues of old mystery and detective magazines and reformatting the stories for internet and ereader use. </p>
 
 		<p>We never claim ownership or copyright on any material presented here unless otherwise expressly stated. We have, however, put a great deal of work into reformatting, cleaning and restyling the content. Many of the images, in particular, are redrawn by hand to ensure the highest quality. While legally you can copy and use most of the images (some are custom and therefore subject to our copyright; this will be noted) and stories, we ask that you respect our efforts and simply link to the story if you wish to share it.</p>
+
+		<p>It is NEVER our intent to publish any work without give credit where credit is due or without permission. If you are the copyright owner of a work found on this site, please let use know by using the <a href="#contactform">contact form</a>, below. We have made every effort to ensure that we are not violating anyone's copyright but in the event of an oversight, we will work with you to correct the oversight. Again, it is our intent to provide these stories to new and old fans and ensure their lasting availability, not take away from the owner's ability to promote their own work.</p>
 
 		<p>Individual collections and works may have their own copyright, as applicable under US Copyright Law, and will be thus indicated.</p>
 
@@ -28,7 +30,7 @@
 
 	</div> <!-- end of div terms__content -->
 
-	<div class="faq">
+	<!-- <div class="faq">
 		<h3>FAQ</h3>
 		<h4>Have more questions? Check out our FAQ.</h4>
 		<br>
@@ -44,8 +46,8 @@
 
 
 
-		<!-- <p>[COMING SOON]</p> -->
-	</div>
+		<p>[COMING SOON]</p> 
+	</div> -->
 
 	<footer class="policies__footer">
 		
