--- a/_includes/wgsalesletter2.html
+++ b/_includes/wgsalesletter2.html
@@ -1,9 +1,9 @@
 
 <div class="salesletter inner-container">
 
-  <h2>Got your detective juices flowing?!</h2>
+  <h2 style="font-size: 2.5rem;">Did that get your detective juices flowing?!</h2>
   <h3>Why stop now?</h3>
-  <p class="salesletter__sub1">Keep reading to find out how you can get more murder and more crime fiction than you ever imagined &hellip; including a <span class="underline">free novella</span> (normally sells for $1.99) just for checking it out!</p>
+  <p class="salesletter__sub1">Keep reading to find out how you can get more murder and more crime fiction than you ever imagined &hellip; including a <span class="underline">free novella</span> (normally sells for $1.99) just for stopping by!</p>
   <p>If you love a good mystery, like <span class="italic">Death by Gas</span>.</p>
   <p>If you love:</p>
   <p class="indent bloodied">&hellip; murder on a rainy night</p>
@@ -12,7 +12,7 @@
   <p class="indent bloodied">&hellip; dangerous dames</p>
   <p class="indent bloodied">&hellip; genteel grannies &amp; society murder</p>
   <p class="indent bloodied">&hellip; puzzles, crime, clues &amp; red herrings</p>
-  <p class="bold">Then you're in the right place!</p>
+  <p class="bold">Then you'll love <em>Tales of Murder</em>!</p>
   
 
   <p>See, that's what I'm offering you here on <span class="sitetitle">Tales of Murder</span> &hellip; thrilling murder mystery &amp; crime stories that grab hold of you and don't let go until the last line.</p>
@@ -24,14 +24,14 @@
   <p class="caps bloodied indent6">All of it.</p>
   <p class="italic bold caps bloodied indent7">In one place.</p>
 
-  <p class="salesletter__sub2">Let me introduce myself</p>
+  <h4 class="salesletter__sub2">Let me introduce myself</h4>
 
   <img class="intro_atticus" src="/assets/img/shield2.png" alt="Atticus, the Murderous Crow">
 
   <p>My name is <strong>Atticus, aka The Murderous Crow</strong>. I'm what you might call a literary detective. Not like ole Sherlock&ndash;a detective <span class="italic">in</span> literature. No, I investigate crime literature, itself.</p>
-  <p>It's my job to search the dark alleys, the rain-soaked moors and lonely mansions, the small towns and big cities for the best murder mystery &amp; crime stories by the best writers in biz, anywhere they may be found. Lost issues, old paperbacks, discarded volumes</p>
+  <p>It's my job to search the dark alleys, the rain-soaked moors and lonely mansions, the small towns and big cities for the best murder mystery &amp; crime stories by the best writers in biz, anywhere they may be found. Lost issues, old paperbacks, discarded volumes.</p>
   <p>I've collected these stories &mdash; ranging from short brain teasers like <span class="italic">Death by Gas</span> to full-length novels that'll keep you guessing long past your bedtime, and everything in between!</p>
-  <p>Cozies, capers hardboiled &amp; noir, professional sleuths and hapless hacks caught up in murder.</p>
+  <p>Cozies, capers, hardboiled &amp; noir, professional sleuths and hapless hacks caught up in murder. Little old ladies snooping into society murders, classic detectives intuiting solutions to perplexing puzzles.</p>
   <p class="salesletter__sub3">Classic stories from the past 100+ years, like:</p>
   <ul class="fa-ul salesletter__storylist">
     <li><span class="storytitle"><i class="fa-li fa fa-book"></i>You'll Kill the People</span> by Richard Brister</li>
@@ -50,25 +50,25 @@
 
   <p>Every story can be read online or downloaded to be enjoyed offline on your fav ebook reader &hellip; Kindle, Nook, Kobo, you-name-it ereader device or app.</p>
 
-  <p class="salesletter__sub2">Here's the deal</p>
+  <h4 class="salesletter__sub2">Here's the deal</h4>
 
   <img src="/assets/img/customer-avatar.png" alt="customer avatar" class="customer-avatar">
 
-  <p>You're a murder mystery &amp; crime fiction fan. You want to spend your time reading; chasing clues with your favorite detective &amp; solving literary crime. You don't want to waste your valuable time searching the jungle (or is it a rain forest?) for something good.</p>
+  <p>You're a murder mystery &amp; crime fiction fan. You want to spend your time reading; chasing clues with your favorite detective &amp; solving literary crime. You don't want to waste your valuable time searching for something good to read.</p>
 
-  <p>Sure, you can ask a stranger for a Good Read, but how do you know for sure? I mean, just 'cause some <em>pigeon</em> gave it 5 stars doesn't mean it's star-worthy.</p>
+  <p>Sure, you can ask a stranger for a good read, but how do you know for sure? I mean, just 'cause some <em>pigeon</em> gave it 5 stars doesn't mean it's star-worthy.</p>
 
   <p>But what if you knew every story had been read &amp; enjoyed by thousands of readers, that it had stood the test of time, and garnered critical praise &amp; honor?</p>
 
-  <p>See, I want to put the best murder myster &amp; crime literature in you hands. Stories from authors like <span class="bloodied italic">Ward Sterling, Harry C. Hervey, Jr., John D. MacDonald</span>.</p>
+  <p>See, I want to put the best murder myster &amp; crime literature in your hands. Stories from authors like <span class="bloodied italic">Ward Sterling, Harry C. Hervey, Jr., Thyra Samter Winslow, John D. MacDonald, Walter Daffenbaugh, Amelia R. Long, and hundreds more.</span>.</p>
   <p>Authors who've been published in the finest detective story collections; who's work has thrilled readers for decades, not weeks.</p>
 
   <!-- <img src="/assets/img/author-headshots" alt="author headshots" class="author-headshots"> -->
 
   <p>That's what you get here at <span class="sitetitle">Tales of Murder</span> &mdash; the best literary crime &amp; murder published anywhere, written by the best writers in the biz &hellip;</p>
-  <p class="bold bloodied">Now available for easy reading online, or on your fav ereader device or ebook app.</p>
+  <p class="bold bloodied">All this, now available for easy reading online, or on your fav ereader device or ebook app.</p>
 
-  <p class="salesletter__sub2">But wait, there's more &hellip;</p>
+  <h4 class="salesletter__sub2">But wait, there's more &hellip;</h4>
   
   <p>Sure, you can stop by the site when you think of it. Browse the list of stories, sorting by genre (cozy, noir, caper, professional/amateur sleuth, golden age, etc.), author, etc., and find a few goodies to read. But, &hellip;</p>
   <p>What if you miss one, overlook that edge-of-your-seat thrill that'll cure the weekday blues?</p>
@@ -81,31 +81,33 @@
 
   <img class="rf-cover shadowed" src="/assets/img/rf-cover.png" alt="THE RED FILE cover">
 
-  <p><span class="bold caps bloodied">The Red File</span> is my weekly email digest of murder mystery &amp; crime stories. This collection of short stories, which normally sells for $3.99 per issue, includes 12 stories ranging from quick <i>while-you-wait</i> 15-minute reads (perfect for while your waiting at the doctor's office or to pick up your kids at school) to <i>leisurely Saturday afternoon</i> reads that're just the ticket on a cold, rainy day.</p>
+  <p><span class="bold caps bloodied">The Red File</span> is my weekly email digest of murder mystery &amp; crime stories. This collection of short stories, which normally sells for $3.99 per issue, includes 12 stories ranging from quick <i>while-you-wait</i> 15-minute reads (perfect for while you're waiting at the doctor's office or to pick up your kids at school) to <i>leisurely Saturday afternoon</i> reads that're just the ticket on a cold, rainy day.</p>
 
-  <p>Every issue is jam packed with a variety of styles &amp; types of murder mystery &amp; crime stories, from cozy to noir, amateur &amp; professional sleuths, crazed crooks &amp; desperate desperadoes. Over 110 pages &mdash; 40,000 plus words &mdash; of crime, clues, suspense, dames, detectives, murder &amp; mystery.</p>
+  <p>Every issue is jam packed with a variety of styles and types of murder mystery &amp; crime stories, from cozy to noir, amateur &amp; professional sleuths, crazed crooks &amp; desperate desperadoes. Over 110 pages &mdash; 40,000 plus words &mdash; of crime, clues, suspense, dames, detectives, murder &amp; mystery.</p>
 
-  <p>It's like getting a paperback novel every week, for free!</p>
+  <p><strong>It's like getting a paperback novel every week, for free!</strong></p>
 
-  <p>And sent directly to your inbox, each issue lists the new stories and other content, providing direct links to download each story to your favorite ereader device. Or, download the entire issue.</p>
+  <p>And sent directly to your inbox, each issue lists the new stories and other content, providing direct links to download each story to your favorite ereader device.</p>
 
-  <p class="salesletter__sub2">Every issue includes:</p>
+  <p>Or, download the entire issue to read offline, anytime.</p>
+
+  <h4 class="salesletter__sub2">Every issue includes:</h4>
   <ul class="fa-ul salesletter__trf">
     <li><i class="fa-li fa fa-cog fa-spin"></i>10 short stories you can enjoy more than a week before the general public sees it online</li>
-    <li><i class="fa-li fa fa-cog fa-spin"></i>2 PREMIUM, subscriber-only longer short stories, up to 10,000 words each</li>
-    <li><i class="fa-li fa fa-cog fa-spin"></i>a serialized murder mystery novel, a few chapters each week</li>
+    <li><i class="fa-li fa fa-cog fa-spin"></i>2 PREMIUM, subscriber-only short stories, up to 10,000 words each</li>
+    <!-- <li><i class="fa-li fa fa-cog fa-spin"></i>a serialized murder mystery novel, a few chapters each week</li> NOTE: ADD THIS BACK LATER! -->
     <li><i class="fa-li fa fa-cog fa-spin"></i>news &amp; relevant information from the world of literary crime &amp; murder</li>
     <li><i class="fa-li fa fa-cog fa-spin"></i>a Definition of the Week (Quick quiz ... do you know what a flivver is? The answer is on the sign up form, below!)</li>
     <li><i class="fa-li fa fa-cog fa-spin"></i>surprise offers, exclusive to true murder mystery fans (that's you!)</li>
   </ul>
   
-  <p>Simply subscribe below with your best email address, something you'll have access to on your tablet or smartphone. (Unsubscribe anytime; I'll never send any heavies to inquire why!)</p>
+  <p>Simply subscribe below with your best email address, something you'll have access to on your tablet or smartphone. (Unsubscribe anytime; I'll never send any heavies to inquire why! And your email address is always secured away from nefarious evildoers who'd maliciously cram your inbox with garbage.)</p>
 
-  <p>Then, every Sunday morning, you'll wake up to a new issue of THE RED FILE in your inbox. Each email contains the Table of Contents for that issue.</p>
+  <p>Then, every Sunday morning, about 9 a.m. local, you'll wake up to a new issue of THE RED FILE in your inbox. Each email contains the Table of Contents for that issue.</p>
 
-  <p class="salesletter__sub2">3 Simple Steps</p>
+  <h4 class="salesletter__sub2">3 Simple Steps</h4>
   <ol>
-    <li>Just click, open and brown the ToC.</li>
+    <li>Just click, open and browse the ToC.</li>
     <li>See a story that looks interesting?
       <ul>
         <li class="inner">Click on it &amp; you'll be instantly taken to the download page; OR, </li>
@@ -115,7 +117,7 @@
     <li>Sit back, open your stories on your ereader device or app &hellip; lose yourself.</li>
   </ol>
 
-  <p class="salesletter__sub2">And because I like you</p>
+  <h4 class="salesletter__sub2">And because I like you</h4>
 
   <p>I'm giving away, for a limited time, an exciting, edge-of-your-seat murder mystery novella as my way of welcoming you to my little literary detective agency. Normally, this gem sells for $1.99 but it's yours free, just for signing up.</p>
 
@@ -143,22 +145,22 @@
   
   </div> <!-- end div .description -->
 
-  <p>Plus, you'll be sent a sample issue (complete) of THE RED FILE to download &amp; enjoy between now &amp; next Sunday morning.</p>
+  <p><strong>Plus</strong>, you'll be sent a sample issue (complete) of THE RED FILE to download &amp; enjoy between now &amp; next Sunday morning.</p>
 
-  <p>Not only that, but you'll have instant access to all my Premium stories not available to just anybody. When browsing my list of stories (under SHORT STORIES), look for the yellow PREMIUM banner on a story, click to open the story page, then enter the email address you used to sign up, and the story is yours to enjoy.</p>
+  <p><strong>Not only that</strong>, but you'll have instant access to all my Premium stories not available to just anybody. When browsing my list of stories (under SHORT STORIES), look for the yellow PREMIUM banner on a story, click to open the story page, then enter the email address you used to sign up, and the story is yours to enjoy.</p>
 
   <div class="giveaway__smallprint">
   <p><strong>Note:</strong> I use a little cookie on your browser that reminds the browser that you've already signed up. That way, when you come back, you won't have to sign in again.</p>
-  <p>Your information is NEVER shared with anyone &amp; your other online activities are NEVER tracked with this cookie. Think of it as the doorman at the underground club who slides open the little door, recognizes you, &amp; lets you enter.</p>
+  <p>Your information is NEVER shared with anyone &amp; your other online activities are NEVER tracked with this cookie. Think of it as the doorman at the exclusive, members-only underground club who slides open the little door, recognizes you, &amp; lets you enter.</p>
   </div>
 
-  <p class="salesletter__sub2">Well, what're you waiting for??</p>
+  <h4 class="salesletter__sub2">Well, what're you waiting for??</h4>
 
   <p>Click the big red button, below (not the black button that'll just take you to my story files), and get your free novella, The Campaign for Vengence. Remember you'll also get the sample issue and be subscribed to get the weekly issue of THE RED FILE, including:</p>
   <ul class="fa-ul salesletter__trf">
     <li><i class="fa-li fa fa-chevron-circle-right"></i>10 thrilling stories</li>
-    <li><i class="fa-li fa fa-chevron-circle-right"></i>2 PREMIUM stories</li>
-    <li><i class="fa-li fa fa-chevron-circle-right"></i>a serialized novel</li>
+    <li><i class="fa-li fa fa-chevron-circle-right"></i>2 PREMIUM, subscriber-only stories</li>
+    <!-- <li><i class="fa-li fa fa-chevron-circle-right"></i>a serialized novel</li> NOTE: ADD THIS BACK LATER!! -->
     <li><i class="fa-li fa fa-chevron-circle-right"></i>news, definitions, and more!</li>
   </ul>
 
