--- a/_includes/bookcatalog__pending.html
+++ b/_includes/bookcatalog__pending.html
@@ -13,6 +13,51 @@
 		<h3>Current works in progress include&#58;</h3>
 		<ul class="cards bc__list clearfix">
 			<li class="card bc__book">
+				<h2 class="card__title bc__title">Bereave It or Not</h2>
+				<h3 class="card__author bc__author">Thorne Lee</h3>
+				<p>Word Count: 11,245</p>
+			</li>
+			<li class="card bc__book">
+				<h2 class="card__title bc__title">So Dead The Rose</h2>
+				<h3 class="card__author bc__author">Sim Albert</h3>
+				<p>Word Count: 12,268</p>
+			</li>
+			<li class="card bc__book">
+				<h2 class="card__title bc__title">The Man Who Was Seven</h2>
+				<h3 class="card__author bc__author">J. Frederic Thorne</h3>
+				<p>Word Count: 13,010</p>
+			</li>
+			<li class="card bc__book">
+				<h2 class="card__title bc__title">Black Shadows</h2>
+				<h3 class="card__author bc__author">J. C. Kofoed</h3>
+				<p>Word Count: 13,482</p>
+			</li>
+			<li class="card bc__book">
+				<h2 class="card__title bc__title">The Man in the Black Mask</h2>
+				<h3 class="card__author bc__author">Harold Ward</h3>
+				<p>Word Count: 12,799</p>
+			</li>
+			<li class="card bc__book">
+				<h2 class="card__title bc__title">Keep the Corpse Hot</h2>
+				<h3 class="card__author bc__author">T. W. Ford</h3>
+				<p>Word Count: 13,760</p>
+			</li>
+			<li class="card bc__book">
+				<h2 class="card__title bc__title">Orchids for Madame</h2>
+				<h3 class="card__author bc__author">Greta Bardet</h3>
+				<p>Word Count: 13,852</p>
+			</li>
+			<li class="card bc__book">
+				<h2 class="card__title bc__title">The Campaign for Vengence</h2>
+				<h3 class="card__author bc__author">John Baer</h3>
+				<p>Word Count: 15,185</p>
+			</li>
+			<li class="card bc__book">
+				<h2 class="card__title bc__title">The Spider Lily</h2>
+				<h3 class="card__author bc__author">Bruno Fischer</h3>
+				<p>Word Count: 75,518</p>
+			</li>		
+			<li class="card bc__book">
 				<h2 class="card__title bc__title">And Sudden Death</h2>
 				<h3 class="card__author bc__author">Cleve F. Adams</h3>
 			</li>
