--- a/_includes/ssactions.html
+++ b/_includes/ssactions.html
@@ -3,26 +3,26 @@
 
 <!-- SOCIAL MEDIA SHARE BUTTON & POPUP/TOOLTIP -->
 <!-- NOTE: issues with links ... creating error in console!! -->
-	<div class="tooltip-item">
+	<!-- <div class="tooltip-item">
 		<button class="ssactions__button" id="share" type="button">
 			<span class="icon"><i class="fa fa-share-alt"></i></span>
 			<span class="label label__share">Share</span>
 			<div class="tooltip smactions">
 				<ul class="smactions__list">
 					<li class="smactions__list__item">
-					<a href="#" rel="nofollow" target="_blank"><i class="fa fa-facebook-square fa-fw"></i>&nbsp; Share on Facebook</a> <!-- https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }} -->
-					</li>
+					<a href="#" rel="nofollow" target="_blank"><i class="fa fa-facebook-square fa-fw"></i>&nbsp; Share on Facebook</a> --> <!-- https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }} -->
+					<!-- </li>
 
 					<li class="smactions__list__item">
-						<a href="#" target="_blank"><i class="fa fa-twitter fa-fw"></i>&nbsp; Share on Twitter</a> <!-- https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&text={{ page.title }}&hellip;{{ page.excerpt }}&via=talesofmurder -->
-					</li>
+						<a href="#" target="_blank"><i class="fa fa-twitter fa-fw"></i>&nbsp; Share on Twitter</a>  --><!-- https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&text={{ page.title }}&hellip;{{ page.excerpt }}&via=talesofmurder -->
+					<!-- </li>
 					<li class="smactions__list__item">
 						<a href="#"><i class="fa fa-clipboard fa-fw"></i>&nbsp; Embed URL</a>
 					</li>
 				</ul>
 			</div>
 		</button>
-	</div>
+	</div> -->
 
 
 
