--- a/_includes/wgsalesletter2.html
+++ b/_includes/wgsalesletter2.html
@@ -2,7 +2,7 @@
 <div class="salesletter inner-container">
 
   <h2 style="font-size: 2.5rem;">Did that get your detective juices flowing?!</h2>
-  <h3>Why stop now?</h3>
+  <h3>Bet it did &hellip; so why stop now?</h3>
   <p class="salesletter__sub1">Keep reading to find out how you can get more murder and more crime fiction than you ever imagined &hellip; including a <span class="underline">free novella</span> (normally sells for $1.99) just for stopping by!</p>
   <p>If you love a good mystery, like <span class="italic">Death by Gas</span>.</p>
   <p>If you love:</p>
@@ -26,7 +26,7 @@
 
   <h4 class="salesletter__sub2">Let me introduce myself</h4>
 
-  <img class="intro_atticus" src="/assets/img/shield2.png" alt="Atticus, the Murderous Crow">
+  <img class="intro_atticus" src="/assets/img/logo_bird-min.png" alt="Atticus, the Murderous Crow">
 
   <p>My name is <strong>Atticus, aka The Murderous Crow</strong>. I'm what you might call a literary detective. Not like ole Sherlock&ndash;a detective <span class="italic">in</span> literature. No, I investigate crime literature, itself.</p>
   <p>It's my job to search the dark alleys, the rain-soaked moors and lonely mansions, the small towns and big cities for the best murder mystery &amp; crime stories by the best writers in biz, anywhere they may be found. Lost issues, old paperbacks, discarded volumes.</p>
