tmp disabled ss downloads

--- a/_layouts/post_combo.html
+++ b/_layouts/post_combo.html
@@ -56,9 +56,9 @@ layout: default
 		<p>Enjoy an online sample of <span>{{ page.title }}</span>. To read the full story, just register with a valid email address. You'll also be able to download either a PDF, Kindle or ePub version. Full details below the sample.</p>
 	</div> <!-- end div pc-tease -->
 		
-	<div class="cu-tease grit">
+	<!--<div class="cu-tease grit">
 		<p><strong>PSST! Hey, buddy &hellip;</strong> did'ya know you can download <a href="#"><strong>{{ page.title }}</strong></a> for any ereader device (<em>Kindle, iBooks, etc.</em>) or as PDF &hellip; perfect for reading when you're not online but have time to kill! <strong>Look for the <a href="#ssactions_ID"><span>Download</span></a> buttons at the end of this story.</strong></p>
-	</div> <!-- end div cu-tease -->
+	</div>  end div cu-tease --> <!-- NOTE: DISABLED TEMPORARILY UNTIL PROPER DOWNLOAD CAN BE SET UP ... DAY OR TWO AT MOST!! -->
 	
 		{% include fontresizer.html %}
 
