logo link; full card clickable

--- a/_includes/card.html
+++ b/_includes/card.html
@@ -12,7 +12,7 @@
 	
 
 	{% if post.category == 'short-stories' %}
-	<!-- <a href="{{ post.url }}"> -->
+	<a href="{{ post.url }}">
 		<li class="card" {% if post.genre %} id="{{ post.genre | downcase }}"{% endif %}>
 
 			<div class="card__header" style="background-image: url('{{ post.image }}'); width: 100%;">
@@ -47,7 +47,7 @@
 			</p>
 
 		</li>
-	<!-- </a> -->
+	</a>
 	{% endif %}
 	{% endfor %}
 
