--- a/_includes/ssactions.html
+++ b/_includes/ssactions.html
@@ -27,12 +27,12 @@
 
 
 <!-- DOWNLOAD THIS SHORT STORY BUTTON -->
-	<!-- <a href="#openModal" class="ssactions__button__link" id="button__postdownload">
+	<a href="#openModal" class="ssactions__button__link" id="button__postdownload">
 		<button class="ssactions__button" id="download" type="button">
 			<span class="icon"><i class="fa fa-cloud-download"></i></span>
 			<span class="label">Download</span>
 		</button>
-	</a> -->
+	</a>
 
 	<div id="openModal" class="modalDialog">
     <div class="modal-inner">
