--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -8,7 +8,9 @@
 			<!-- <img src="/assets/img/circle_crow_paper.png" alt="" class="masthead__logo grit"> -->
 
 			<div class="branding">
-				<img class="" src="/assets/img/site_logo4a_f.png" alt="site logo for TalesofMurder.com" width="600">
+				<a href="http://www.talesofmurder.com/">
+					<img class="" src="/assets/img/site_logo4a_f.png" alt="site logo for TalesofMurder.com" width="600">
+				</a> <!-- link (ahref) makes header image a link back to HOME -->
 				<!-- <h2 class="masthead__title grit"><span class="title__sub">Tales of </span><span class="title__main"><span class="m">m</span><span class="urde">urde</span><span class="r">r</span></span></h2>
 
 				<h3 class="masthead__tagline">For readers with time to <span>kill</span> &hellip;</h3> -->
