--- a/_layouts/trf-issue.html
+++ b/_layouts/trf-issue.html
@@ -28,14 +28,14 @@ layout: default
 
 				<h3>DOWNLOAD ISSUE</h3>
 
-				<a href="https://s3.amazonaws.com/talesofmurder.com/shortstories/THE_RED_FILE_v1n1.mobi" class="ssactions__button__link">
+				<a href="{{ page.kindle }}" class="ssactions__button__link">
 	        <button class="ssactions__button" id="Kindle__download" type="button" label="Kindle version">
 	          <span class="icon"><i class="fa fa-file-o fa-lg"><strong class="fa-stack-1x kindleicon">a</strong></i></span>
 	          <span class="label">Kindle</span>
 	        </button>
 	      </a>
 
-	      <a href="https://s3.amazonaws.com/talesofmurder.com/shortstories/THE_RED_FILE_v1n1.epub" class="ssactions__button__link">
+	      <a href="{{ page.epub }}" class="ssactions__button__link">
 	        <button class="ssactions__button" id="epub3__download" type="button" label="ePub3 version">
 	          <span class="icon"><i class="fa fa-file-o fa-lg"></i><strong class="fa-stack-1x epubicon">e</strong></span>
 	          <span class="label">ePub 3.0</span>
