add Netlify article

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,61 +4,24 @@ layout: default
 <div id="thepost" class="{{ page.layoutTag }}">
 
   <header class="post__header clearfix">
-	<!-- README IF STATEMENT -->
-  {% if site.readtime %}
-	  {% if site.wpm %}
-  	  {% assign readtime = page.wordcount | divided_by:site.wpm %}
-  	{% else %}
-    	{% assign readtime = page.wordcount | divided_by:180 %}
-  	{% endif %}
-	{% endif %}
-			
+
 		<div class="clearfix">
 	  	<div class="titles" id="top">
 				<h2 class="post__title">{{ page.title }}</h2>
-				<h2 class="post__excerpt">{{ page.excerpt }}</h2>
+				<!-- <h2 class="post__excerpt">{{ page.excerpt }}</h2> -->
 				<h3 class="post__author">By <strong>{{ page.author }}</strong></h3>
 			</div>
 			<div class="post__img">
 				<img src="{{ page.image }}" alt="{{ post.title }}">
 			</div>
-		</div>	
-		
-		<div class="post__meta">
-			<p>word count: {{ page.wordcount | thousands_separated }}</p>
-			<p>time to read:
-				{% if site.readtime %}
-				{% if readtime > 60 %}
-				{% assign readtime_hours = readtime | divided_by: 60 %}
-				{% assign readtime_minutes = readtime | modulo:60 %}
-					{% if readtime_hours > 1 and readtime_hours < 2 %}1 hour
-					{% else %}<span class="hour">{{ readtime_hours }}</span> hr
-					{% endif %}{% if readtime_minutes < 1 %}{% elsif readtime_minutes > 1 and readtime_minutes < 1.5 %} and 1 minute {% elsif readtime_minutes > 1.5 %} and <span class="time">{{ readtime_minutes }}</span> min{% endif %}
-				{% else %}
-					{% if readtime < 1 %}Less than 1 minute {% elsif readtime > 1 and readtime < 1.5 %}1 minute {% elsif readtime > 1.5 %}<span class="time">{{ readtime }}</span> min {% endif %}{% endif %}
-				{% endif %}
-			</p>
-		</div> <!-- end div post__meta -->
+		</div>
 
   </header>
 
   <!-- insert download teaser div -->
 
-	<div class="cu-tease">
-
-		<!-- <p><strong>NOTE&#058;</strong> You can bookmark <a href="#"><strong>{{ page.title }}</strong></a> for later reading, download a copy for your favorite ereader (<em>Kindle, iBooks, etc.</em>) for offline reading or sharing with a friend. Look for the <span>Bookmark</span>, <span>Share</span>, &amp; <span>Download</span> buttons below this story.</p> --> 
-		
-		<p><strong>PSST! Hey, buddy &hellip;</strong> did'ya know you can download <a href="#"><strong>{{ page.title }}</strong></a> for any ereader device (<em>Kindle, iBooks, etc.</em>) or as PDF &hellip; perfect for reading when you're not online but have time to kill! <strong>Look for the <span>Share</span>> &amp; <span>Download</span> buttons at the end of this story.</strong></p>
-	
-	</div>
-
  	<article class="post__content">
   	{{ content }}
   </article>
-
-	<!-- <hr> -->
-
-  <!-- include: (1) social media share; (2) content upgrade -->
-	{% include ssactions.html %}
 
 </div> <!-- end of div post -->
