--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,7 +14,7 @@
         <a {% if page.url == '/short-stories/index.html' %} class="active" {% endif %} href="/short-stories/index.html">Short&nbsp;Stories</a>
        <!--  <a {% if page.url == '/the-red-file/index.html' %} class="active" {% endif %} href="/the-red-file/index.html">The&nbsp;Red&nbsp;File</a>
         <a {% if page.url == '/book-catalog/index.html' %} class="active" {% endif %} href="/book-catalog/index.html">Book&nbsp;Catalog</a> -->
-        <!-- <a {% if page.url == '/murderwiki/index.html' %} class="active" {% endif %} href="/murderwiki/index.html">MurderWiki</a> -->
+        <a {% if page.url == '/murderwiki/index.html' %} class="active" {% endif %} href="/murderwiki/index.html">MurderWiki</a>
       </div>
     </nav> <!-- nav__primary -->
 
