edit Netlify article

--- a/_assets/scss/styles.scss
+++ b/_assets/scss/styles.scss
@@ -51,7 +51,7 @@
 @import 'partials/modules/fontresizer';
 @import 'partials/modules/trfpage';
 @import 'partials/modules/mcform';
-
+@import 'partials/modules/murderwiki';
 
 /*==========  LAYOUT  ==========*/
 // @import 'partials/layout/test';
