added 1st 7 articles to murderwiki

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 {% include head.html %}
 
-<body {% if page.title %} id="{{ page.title }}"{% endif %} class="ipadBS">
+<body {% if page.title %} id="{{ page.title }}"{% endif %} class="ipadBS {{ page.category }}">
 
 	<!-- include facebookshare.html -->
 
