--- a/_layouts/post_mw.html
+++ b/_layouts/post_mw.html
@@ -15,14 +15,14 @@ layout: default
 
 		<div class="clearfix titlebox">
 	  	<div class="storytitles" id="top">
-				<h1 class="post__title">{{ page.title }}</h1>
+				<h1 class="post__title" style="margin-bottom:2rem;font-size:3rem;">{{ page.title }}</h1>
 				<h2 class="post__title" style="margin-bottom:2rem;font-size:2rem;">{{ page.subtitle }}</h2>
-				<h3 class="post__author">By <strong>{{ page.author }}</strong>, {{ page.bio }}</h3>
-				<!-- <figure class="post__img"> add class grit to dirty up pic
+				<h3 class="post__author">By <strong>{{ page.author }}</strong></h3>
+
+				<figure class="post__img"> <!-- add class grit to dirty up pic -->
 						<img src="{{ page.image }}" alt="{{ post.title }}">
-						<figcaption class="caption"><strong class="casefilenum">CASEFILE NO. {{ page.casefileNumber }}:</strong>
 						<figcaption class="post__excerpt">{{ page.excerpt }}</figcaption>
-				</figure> <!-- end div post__image -->
+				</figure> <!-- end div post__image
 				<!-- <h2 class="post__excerpt">{{ page.excerpt }}</h4> -->
 			</div> <!-- end div titles -->
 		</div> <!-- end div clearfix -->
