--- a/_assets/scss/partials/modules/_murderwiki.scss
+++ b/_assets/scss/partials/modules/_murderwiki.scss
@@ -1,5 +1,44 @@
+
+.murderwiki {
+  h2 {
+    color: $acolor;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    margin-top: 2rem;
+  }
+  .firstpara {
+    font-size: 1.125rem;
+    font-weight: bolder;
+  }
+  blockquote {
+    font-size: 0.875rem;
+    font-style: italic;
+    text-align: justify;
+    color: $pcolor;
+    margin: 0 auto;
+    padding: 0;
+    border: none;
+    float: none !important;
+    width: 90%;
+  }
+}
+
+
 .edit {
   font-size: 0.85rem;
   width: 85%;
   margin: 0 auto;
+}
+
+.references {
+  color: $acolor;
+  text-transform: uppercase;
+}
+
+
+ol.references li {
+  text-transform: lowercase !important;
+  font-size: 0.75rem;
+  color: $acolor;
+  text-overflow: ellipsis;
 }
