--- a/_assets/scss/partials/modules/_murderwiki.scss
+++ b/_assets/scss/partials/modules/_murderwiki.scss
@@ -6,6 +6,9 @@
     font-size: 1.5rem;
     margin-top: 2rem;
   }
+  .card__meta {
+    color: #fff;
+  }
   .firstpara {
     font-size: 1.125rem;
     font-weight: bolder;
